home slider visibility fix

--- a/static/css/bulma.css
+++ b/static/css/bulma.css
@@ -2623,7 +2623,7 @@ a.box:active {
 .content h4,
 .content h5,
 .content h6 {
-  color: #363636;
+  color: #0598d2;
   font-weight: 400;
   line-height: 1.125;
 }
